--- a/css/qb.css
+++ b/css/qb.css
@@ -13,15 +13,20 @@ body,
 input,
 textarea {
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   color: #4c4c4c;
 
 }
 select {
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  color: #4c4c4c;
+  font-size: 20px;
+  color: black;
   width:100%;
+  height: 40px;
+
+  margin-top: 13px;
+  padding-left: 10px;
+  background-color: #d2d4d8;
 }
 
 p {
@@ -161,7 +166,7 @@ input[type=password]{
 }
 
 a.button {
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 600;
   color: white;
   padding: 6px 25px 0px 20px;
@@ -169,14 +174,15 @@ a.button {
   display: inline-block;
   float: right;
   text-decoration: none;
-  width: 100%; height: 27px;
+  text-align: center;
+  width: 67%; height: 30px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
   background-color: #3a57af;
-  -webkit-box-shadow: 0 3px rgba(58,87,175,.75);
-  -moz-box-shadow: 0 3px rgba(58,87,175,.75);
-  box-shadow: 0 3px rgba(58,87,175,.75);
+  -webkit-box-shadow: 0 0px rgba(58,87,175,.75);
+  -moz-box-shadow: 0 0px rgba(8,87,175,.75);
+  box-shadow: 0 0px rgba(58,87,175,.75);
   transition: all 0.1s linear 0s;
   top: 0px;
   position: relative;
@@ -185,7 +191,7 @@ a.button {
 
 a.button:hover {
   top: 3px;
-  background-color:#2e458b;
+  background-color:#2e422b;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
